@@ -21,6 +21,7 @@
     <informaltable frame="none">
         <tgroup cols="2">
             <colspec colnum="1" colwidth="2.2in" />
+            <colspec colwidth="*"/>
 
             <tbody>
                 <row>
@@ -105,6 +106,7 @@
     <informaltable frame="none">
         <tgroup cols="2">
             <colspec colnum="1" colwidth="2.2in" />
+            <colspec colwidth="*"/>
 
             <tbody>
                 <row>
@@ -174,6 +176,7 @@
     <informaltable frame="none">
         <tgroup cols="2">
             <colspec colnum="1" colwidth="2.2in" />
+            <colspec colwidth="*"/>
 
             <tbody>
                 <row>
@@ -201,6 +204,7 @@
     <informaltable frame="none">
         <tgroup cols="2">
             <colspec colnum="1" colwidth="2.2in" />
+            <colspec colwidth="*"/>
 
             <tbody>
                 <row>
@@ -278,6 +282,7 @@
     <informaltable frame="none">
         <tgroup cols="2">
             <colspec colnum="1" colwidth="2.2in" />
+            <colspec colwidth="*"/>
 
             <tbody>
                 <row>
@@ -388,6 +393,7 @@
     <informaltable frame="none">
         <tgroup cols="2">
             <colspec colnum="1" colwidth="2.2in" />
+            <colspec colwidth="*"/>
 
             <tbody>
                 <row>
@@ -427,6 +433,7 @@
     <informaltable frame="none">
         <tgroup cols="2">
             <colspec colnum="1" colwidth="2.2in" />
+            <colspec colwidth="*"/>
 
             <tbody>
                 <row>
@@ -503,6 +510,7 @@
     <informaltable frame="none">
         <tgroup cols="2">
             <colspec colnum="1" colwidth="2.2in" />
+            <colspec colwidth="*"/>
 
             <tbody>
                 <row>
@@ -618,6 +626,7 @@
     <informaltable frame="none">
         <tgroup cols="2">
             <colspec colnum="1" colwidth="2.2in" />
+            <colspec colwidth="*"/>
 
             <tbody>
                 <row>
@@ -679,6 +688,7 @@
     <informaltable frame="none">
         <tgroup cols="2">
             <colspec colnum="1" colwidth="2.2in" />
+            <colspec colwidth="*"/>
 
             <tbody>
                 <row>
@@ -770,6 +780,7 @@
     <informaltable frame="none">
         <tgroup cols="2">
             <colspec colnum="1" colwidth="2.2in" />
+            <colspec colwidth="*"/>
 
             <tbody>
                 <row>
@@ -823,6 +834,7 @@
     <informaltable frame="none">
         <tgroup cols="2">
             <colspec colnum="1" colwidth="2.2in" />
+            <colspec colwidth="*"/>
 
             <tbody>
                 <row>
@@ -905,6 +917,7 @@
     <informaltable frame="none">
         <tgroup cols="2">
             <colspec colnum="1" colwidth="2.2in" />
+            <colspec colwidth="*"/>
 
             <tbody>
                 <row>
@@ -942,6 +955,7 @@
     <informaltable frame="none">
         <tgroup cols="2">
             <colspec colnum="1" colwidth="2.2in" />
+            <colspec colwidth="*"/>
 
             <tbody>
                 <row>
